codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__slash_reload_plugins_info_message.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
assertion_line: 1752
expression: rendered
---
• Plugins reload requested. Loaded threads queue a best-effort MCP tools refresh on the next turn; plugin instructions and skills already loaded into an older thread stay as-is, so updated plugin context is visible in new threads.
